# universityKPFU1courseC--

./: CMakeLists.txt  README.md
laba1/: CMakeLists.txt
laba1/src/: labwork1_1.cpp  labwork1_10.cpp  labwork1_2.cpp  labwork1_3.cpp  labwork1_4.cpp  labwork1_5.cpp  labwork1_6.cpp  labwork1_7.cpp  labwork1_8.cpp  labwork1_9.cpp
laba10/: CMakeLists.txt
laba10/src/: labwork10_1.cpp  labwork10_2.cpp  labwork10_3.cpp  labwork10_4.cpp  labwork10_5.cpp  labwork10_6.cpp  labwork10_7.cpp  labwork10_8.cpp
laba11/: CMakeLists.txt
laba11/src/: labwork11_1.cpp  labwork11_2.cpp  labwork11_3.cpp
laba12/: CMakeLists.txt
laba12/src/: labwork12_1.cpp  labwork12_2.cpp  labwork12_3.cpp  labwork12_4.cpp  labwork12_5.cpp  labwork12_6.cpp  labwork12_7.cpp  labwork12_8.cpp
laba13/: CMakeLists.txt
laba13/src/: labwork13_1.cpp  labwork13_2.cpp  labwork13_3.cpp  labwork13_4.cpp
laba14/: CMakeLists.txt
laba14/src/: labwork14_1.cpp  labwork14_2.cpp  labwork14_3.cpp
laba15/: CMakeLists.txt
laba15/src/: Cylinder.hpp  Point.hpp  TriangularPrism.hpp  (+5 more)
laba2/: CMakeLists.txt
laba3/: CMakeLists.txt
laba4-5/: CMakeLists.txt
laba6/: CMakeLists.txt
laba7/: CMakeLists.txt
laba8/: CMakeLists.txt
laba9/: CMakeLists.txt
Билет3/: CMakeLists.txt  Отчет по программированию на Сpp.docx
задачи/: Задание_cpp_1.doc  Задание_cpp_10_функции 2.docx  Задание_cpp_11_функции и массивы.docx  Задание_cpp_12_рекурсия.docx  Задание_cpp_13_строки.doc  Задание_cpp_14_структуры.docx  Задание_cpp_15_Классы.docx  Задание_cpp_2.doc  Задание_cpp_3.doc  Задание_cpp_4_5_циклы1.docx  Задание_cpp_6_массивы1_.docx  Задание_cpp_7_многомерные_массивы2.docx  Задание_cpp_8_динамические_v01.docx  Задание_cpp_9_функции 1.docx
(+48 files in other folders)
